--- a/5.머신러닝 기본프로젝트/3. 벡터테이블 생성.ipynb
+++ b/5.머신러닝 기본프로젝트/3. 벡터테이블 생성.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "889b65ce",
+   "id": "94839058",
    "metadata": {},
    "source": [
     "# 개요"
@@ -15,7 +15,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "389643f3",
+   "id": "4a8f91c8",
    "metadata": {},
    "source": [
     "* 추출한 특징정보를 기준에 따라 벡터테이블로 변환하는 작업\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "972d4be8",
+   "id": "c79e873b",
    "metadata": {},
    "source": [
     "# 코드"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "841cfeea",
+   "id": "79946593",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T08:52:04.913132Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "f48c88f2",
+   "id": "4f0ec97a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T08:36:58.138271Z",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6b447074",
+   "id": "ba492695",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T08:36:58.378099Z",
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "c3f7ea2a",
+   "id": "3bb90248",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T08:36:58.641946Z",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a2d4347",
+   "id": "b8c6669e",
    "metadata": {},
    "source": [
     "permission vector table"
@@ -112,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "550373eb",
+   "id": "a27aaa4b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T08:36:59.515960Z",
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "cb4f382e",
+   "id": "5718bbc1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-01-16T08:37:00.070819Z",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b455b84",
+   "id": "3e9f6126",
    "metadata": {},
    "source": [
     "api"
@@ -189,11 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "35df141b",
+   "execution_count": 41,
+   "id": "c8e01c28",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-01-16T08:52:17.400Z"
+     "end_time": "2023-01-16T09:22:39.200635Z",
+     "start_time": "2023-01-16T08:52:17.402066Z"
     }
    },
    "outputs": [
@@ -201,7 +202,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 52%|█████▏    | 515/1000 [14:40<09:51,  1.22s/it]  "
+      "100%|██████████| 1000/1000 [30:21<00:00,  1.82s/it] \n"
      ]
     }
    ],
@@ -223,28 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2569ca03",
+   "execution_count": 42,
+   "id": "267415e7",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-01-16T08:52:28.944Z"
+     "end_time": "2023-01-16T09:28:14.064831Z",
+     "start_time": "2023-01-16T09:22:39.347575Z"
     }
    },
-   "outputs": [],
-   "source": [
-    "sum(api_vector_table[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89a042c6",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2023-01-16T08:52:24.366Z"
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [05:34<00:00,  2.99it/s]\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "api_vector_table = []\n",
     "for file in tqdm(os.listdir('./malware/api/')):\n",
